update schnellsuche und kontakt bearbeiten

--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -725,7 +725,8 @@ Historie ansehen:
 |[#intable-history-access-type]*Zugangsart*
 |Art, wie sich der Kontakt registriert hat. +
 *Regulärer Zugang* = Der Kontakt hat sich neu registriert bzw. der Datensatz wurde manuell im Backend erstellt. +
-*Gastzugang* = Die Bestellung kam über einen Marktplatz in dein System oder der Kontakt hat sich über deinen alten Webshop als Gast angemeldet und bestellt.
+*Gastzugang* = Die Bestellung kam über einen Marktplatz in dein System oder der Kontakt hat sich über deinen Webshop als Gast angemeldet und bestellt. +
+*_Hinweis:_* Wenn der Datensatz ein Gast ist und eine ID hat, ist die Bestellung über einen Marktplatz in dein System gekommen. Wenn der Datensatz ein Gast ist und keine ID hat, ist die Bestellung über deinen plentyShop ins System gekommen.
 
 |[#intable-history-last-order]*Letzter Auftrag*
 |Datum und Uhrzeit, wann der letzte Auftrag eingegangen ist. Wenn kein Auftrag eingegangen ist, steht in diesem Feld *Keine Daten*.
@@ -1459,7 +1460,8 @@ Zahlungsziel für mehrere Kontakte speichern:
 [#gastzugang-in-regulaeren-zugang-umwandeln]
 == Gastbestellung in regulären Kontaktdatensatz umwandeln
 
-Um DSGVO-konform zu arbeiten, wird bei Gastbestellungen über den plentyShop LTS _kein_ Kontaktdatensatz mit einer Kontakt-ID erstellt. Bestellungen, die als Gast über deinen plentyShop aufgegeben wurden, können daher _nicht_ über das Menü *CRM » Kontakte* gefunden werden. Die Daten des Gastes können nur über die Adressdaten im Menü *CRM » Schnellsuche* gefunden werden.
+Um DSGVO-konform zu arbeiten, wird bei Gastbestellungen, die über deinen plentyShop LTS in dein System kommen, _kein_ Kontaktdatensatz mit einer Kontakt-ID erstellt. Gastbestellungen die über einen Marktplatz in dein System kommen, erhalten jedoch eine ID. +
+Bestellungen, die als Gast über deinen plentyShop aufgegeben wurden, können daher _nicht_ über das Menü *CRM » Kontakte* gefunden werden. Die Daten des Gastes können nur über die Adressdaten im Menü *CRM » Schnellsuche* gefunden werden.
 
 Du erkennst eine Gastbestellung an dem Haken (icon:done[set=material]) in der Spalte *Gast* in der Übersicht.
 
