--- a/docs/de-de/modules/crm/pages/schnellsuche.adoc
+++ b/docs/de-de/modules/crm/pages/schnellsuche.adoc
@@ -7,9 +7,9 @@
 Verwende die Schnellsuche, um alle Informationen eines Kontakts oder die Adressdaten einer Gastbestellung auf einen Blick zu erhalten. Erfahre auf dieser Handbuchseite, wie du DSGVO-gemäß <<#alle-daten-herunterladen, alle Daten zu einem Kontakt oder einer Gastbestellung herunterlädst>> und wie du <<#datensatz-anonymisieren, Datensätze anonymisierst>>.
 
 [NOTE]
-.Gastzugänge über plentyShop können nur in der Schnellsuche gefunden werden
+.Gastbestellungen, die über den plentyShop ins System kommen, können nur in der Schnellsuche gefunden werden
 ====
-Um DSGVO-konform zu arbeiten, wird bei Gastbestellungen über den plentyShop kein Kontaktdatensatz erstellt. Es werden lediglich die Adressdaten gespeichert. Diese Daten, die in deinem plentymarkets System gespeichert werden, können daher nicht über das Menü *CRM » Kontakte* gefunden werden. Die Adressdaten der Person, die als Gast bestellt hat, können nur über die Schnellsuche gefunden werden. +
+Um DSGVO-konform zu arbeiten, wird bei Gastbestellungen, die über den plentyShop in dein System kommen, kein Kontaktdatensatz erstellt. Es werden lediglich die Adressdaten gespeichert. Diese Daten, die in deinem plentymarkets System gespeichert werden, können daher _nicht_ über das Menü *CRM » Kontakte* gefunden werden. Die Adressdaten der Person, die als Gast bestellt hat, können nur über die Schnellsuche gefunden werden. +
 
 Weitere Informationen zum Umwandeln von plentyShop-Gastbestellungen in reguläre Kontaktdatensätze findest du im Kapitel <<#gastzugang-umwandeln, Gastzugang in Kontaktdatensatz umwandeln>>.
 ====
