--- a/docs/de-de/modules/daten/partials/catalogues-manage.adoc
+++ b/docs/de-de/modules/daten/partials/catalogues-manage.adoc
@@ -129,7 +129,7 @@ Katalog-Version wiederherstellen:
 
 . Öffne das Menü *Daten » Kataloge*. +
 → Die Katalog-Übersicht wird geöffnet.
-. *_Möglichkeit 1:_* Über die Katalogübersicht
+. *_Möglichkeit 1:_* In der Katalogübersicht
   .. Öffne in der Zeile des Katalogs die weiteren Aktionen (icon:more_vert[set=material]).
   .. Klicke auf *Katalog-Version wiederherstellen* (icon:history[set=material]). +
 . *_Möglichkeit 2:_* Im Katalogmenü
