ADD first work to the stock chapter

--- a/docs/de-de/modules/warenwirtschaft/pages/wareneingaenge-verwalten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/wareneingaenge-verwalten.adoc
@@ -3,11 +3,11 @@
 :id: D1FCJJV
 :author: team-stock
 
-Es gibt verschiedene Wege, über die du Waren in dein System buchen kannst. Voraussetzung für einen Wareneingang ist, dass der Variante ein Lager, ein Lagerort und ein:e Lieferant:in zugeordnet sind. Auf dieser Seite wird beschrieben, wo und wie das Zuordnen des Lagerorts und der Lieferant:in erfolgt. Außerdem wird der Wareneingang über das Menü *Waren » Neuer Wareneingang* beschrieben. Nur wenn du Wareneingänge und Warenausgänge buchst und so Warenbestände in plentymarkets führst, kann dein System Varianten anhand der xref:artikel:artikel-verwalten.adoc#200[Beschränkung und Verfügbarkeit] automatisiert im Webshop ein- und ausblenden sowie Listings automatisiert starten und beenden.
+Es gibt verschiedene Wege, über die du Waren in dein System buchen kannst.
+Voraussetzung für einen Wareneingang ist, dass der Variante ein Lager, ein Lagerort und ein:e Lieferant:in zugeordnet sind.
 
-[#100]
-== Lieferant:innen einer Variante zuordnen
-include::artikel:partial$lieferant.adoc[]
+Auf dieser Seite wird der Wareneingang über das Menü *Waren » Neuer Wareneingang* beschrieben.
+Nur wenn du Wareneingänge und Warenausgänge buchst und so Warenbestände in plentymarkets führst, kann dein System Varianten anhand der xref:artikel:artikel-verwalten.adoc#200[Beschränkung und Verfügbarkeit] automatisiert im Webshop ein- und ausblenden sowie Listings automatisiert starten und beenden.
 
 [#200]
 == Variante mit Lagerort verknüpfen
