--- a/docs/de-de/modules/willkommen/pages/schnelleinstieg-warenwirtschaft.adoc
+++ b/docs/de-de/modules/willkommen/pages/schnelleinstieg-warenwirtschaft.adoc
@@ -1,4 +1,4 @@
-= Lager und Lieferant:in einrichten
+= Lager und Lieferanten einrichten
 :keywords: Lager, Lieferant, Lieferanten, Lager einrichten, Lieferant einrichten, Lieferanten einrichten
 :id: ME2XTHD
 :author: team-stock
@@ -29,23 +29,12 @@ Lager einrichten:
 . Öffne das Lager, um die Untermenüs zu sehen.
 
 [#200]
-== Lieferant:innen einrichten
+== Lieferanten einrichten
 
-Im Folgenden ist beschrieben, wie du eine Lieferant:in einrichtest. Eine Lieferant:in ist hier nur Typ eines Kontakts.
-
-[.instruction]
-Lieferant:innen einrichten:
-
-. Öffne das Menü *CRM » Kontakte*.
-. Klicke auf *Neuen Kontakt erstellen*.
-. Gib den Namen der Lieferant:in ein.
-. Wähle den Typ *Lieferant*.
-. Wähle im Feld *Neue Adresse* einen Adresstyp (Rechnungs- oder Lieferadresse).
-. Gib die Adressdaten ein.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
+include::warenwirtschaft:page$suppliers.adoc[tag=create-supplier-contact]
 
 [#300]
-== Mehr zum Thema Lager und Lieferant:innen
+== Mehr zum Thema Lager und Lieferanten
 
 * xref:warenwirtschaft:lager-einrichten.adoc#[Lager einrichten]
 * xref:crm:kontakte-verwalten.adoc#100[Kontakte].
