add includes search

--- a/docs/de-de/modules/_includes/pages/save-current-filter.adoc
+++ b/docs/de-de/modules/_includes/pages/save-current-filter.adoc
@@ -9,7 +9,8 @@ Unterüberschrift davon: Aktuellen Filter speichern
 [.instruction]
 Aktuellen Filter speichern:
 
-. Führe eine Suche aus.
+. Öffne das Menü *{menu-path}*.
+. Wähle Filter (icon:tune[set=material]) und führe die Suche (icon:search[set=material]) aus.
 . Klicke auf *Gespeicherte Filter* (icon:bookmarks[set=material]).
 . Klicke auf icon:bookmark_border[set=material] *Aktuellen Filter speichern*.
 . Gib einen Namen für den Filter ein.
