simone/update-auftraege-testphase

--- a/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
@@ -30,6 +30,10 @@ Aufträge, die nicht über den Webshop oder einen Marktplatz bei dir eingehen, l
 
 Passe die xref:auftraege:grundeinstellungen.adoc#[Grundeinstellungen] im Menü *Einrichtung » Aufträge » Einstellungen* an, bevor du die ersten Aufträge in deinem plentymarkets System abwickelst. Speichere die Grundeinstellungen auch dann einmalig ab, wenn du die voreingestellten Werte nicht verändert hast.
 
+////
+Reihenfolge überlegen - Auftragsübersicht davor?
+////
+
 [#260]
 ==== Auftrag oder Angebot anlegen
 
@@ -46,9 +50,13 @@ Auftrag oder Angebot über Kontakt anlegen:
 . Wähle entweder *Neuer Auftrag [Beta]* oder *Neues Angebot [Beta]*. +
 → Du wirst automatisch zu den Auftragsdetails für den neuen Auftrag bzw. des neuen Angebotes weitergeleitet. +
 
+// TODO: alle xref prüfen/anpassen
+
 Über den Auftragsdetails kannst du aus Dropdown-Liste auch nachträglich zwischen Auftrag und Angebot wählen. Zudem kannst du optional eine xref:auftraege:auftraege-verwalten.adoc#295[Auftragsvorlage] aus der Dropdown-Liste auswählen, die auf diesen Auftrag angewendet werden soll. In der Standardeinstellung ist hier keine Auftragsvorlage ausgewählt.
 
 Die im Folgenden beschriebenen Schritte sind für Auftrag und Angebot gleich.
+
+// lt Übergabe muss Angebot neu geschrieben werden.
 
 Die Ansichten der neuen Benutzeroberfläche sind so gestaltet, dass sich Aufträge schnell und übersichtlich anlegen lassen. Dies ist vor allem bei der telefonischen Aufnahme von Bestellungen von Vorteil. Zunächst werden die Auftragsdetails wie z.B. Adressen oder die Zahlungsart abgefragt. Danach werden dem Auftrag Artikel hinzugefügt, um ihn im letzten Schritt zu überprüfen und anzulegen.
 
@@ -101,12 +109,9 @@ Es ist ein Rabatt voreingetragen, wenn der Kontakt zu einer Kundenklasse gehört
 
 Nachdem du alle Einstellungen vorgenommen hast, gehe zum nächsten Schritt weiter indem du auf *Artikel hinzufügen* klickst. Die Auftragsdetails werden gespeichert und du wirst zum nächsten Arbeitsschritt geleitet. In diesem Schritt fügst du dem Auftrag Artikel hinzu.
 
-////
-Reihenfolge überlegen 
-////
 
 [#create-orders-manually]
-== Aufträge manuell anlegen
+=== Aufträge manuell anlegen
 
 Du kannst Aufträge manuell im System anlegen, z.B. wenn eine Bestellung per Telefon getätigt wird. Es gibt verschiedene Möglichkeiten, die du dafür nutzen kannst:
 
@@ -204,7 +209,7 @@ Diese Option ist standardmäßig deaktiviert. Lass sie deaktiviert, wenn du die 
 
 == Auftragsübersicht
 
-Im Menü *Aufträge » Aufträge [Testphase]* steht dir eine Übersicht deiner Aufträge zur Verfügung. Die Übersichtstabelle ist durchsuchbar und hat zwei Level. Im ersten Level werden dir grundlegende Auftragsinformationen angezeigt. Im zweiten Level werden dir grundlegende Informationen zu den Auftragspositionen angezeigt. Du kannst die Level ausklappen, indem du auf *Ausklappen* (icon:chevron_right[set=material]) klickst.
+Im Menü *Aufträge » Aufträge [Testphase]* steht dir die Übersicht deiner Aufträge zur Verfügung. Die Übersichtstabelle ist durchsuchbar und hat zwei Level. Im ersten Level werden dir grundlegende Auftragsinformationen angezeigt. Im zweiten Level werden dir grundlegende Informationen zu den Auftragspositionen angezeigt. Du kannst die Level ausklappen, indem du auf *Ausklappen* (icon:chevron_right[set=material]) klickst.
 
 ////
 Auf dieser Handbuchseite erhältst du eine Übersicht über
@@ -572,7 +577,7 @@ Die Bestandsmenge für das gewählte Datum wird anschließend im Datenfeld *Phys
 
 === Überschrift
 
-Hier wird erklärt, wie du Filter und Operatoren auswählen kannst.
+Hier wird erklärt, welche Filter und Operatoren zur Verfügung stehen und je nach deinem Bedarf gewählt werden können.
 
 [.instruction]
 Filter wählen: 
@@ -588,6 +593,75 @@ Filter wählen:
 . Öffne die gewünschte Gruppe der *Verfügbaren Filter*.
 → Die Auswahl öffnet sich.
 . Klicke auf das +-Zeichen (= Filter hinzufügen), um die gewünschten Filter von *Verfügbare Filter* in *Angezeigte Filter* zu verschieben.
+
+
+=== Nach Aufträgen filtern
+
+Wenn du eine Suche ausführst, siehst du deine gewählten Filter oben als Chips dargestellt. Die Filter in der Auftragssuche sind nun MyView-fähig und können per Drag & Drop von *Verfügbare Filter* in *Angezeigte Filter* verschoben werden. Auch die Reihenfolge innerhalb der Spalten kann per Drag & Drop geändert werden.
+
+Um voreingestellte Filter zu sehen oder auszuwählen, gehe folgendermaßen vor.
+
+[.instruction]
+Nach Aufträgen filtern:
+
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
+. Gehe in die Suchleiste und klicke auf den Filter (icon:tune[set=material]). +
+→ Die Filtereinstellungen werden geöffnet..
+. Wähle Filter, um nur ausgewählte Daten in der Auftragsübersicht zu sehen. Die Auswahl der Filter kann verändert werden.
+. Klicke auf *SUCHEN*. +
+→ Du erhältst eine Liste der gefilterten Daten.
+
+// TODO: Filter parallel zur Weiterentwicklung prüfen, ggf. Screenshots
+
+=== Filteransicht anpassen
+
+Die Filteransicht entspricht nicht deinen Vorstellungen und du möchtest diese gerne auf deine Bedürfnisse anpassen? Über den Bearbeitungsmodus kannst du die Ansicht beliebig verändern.
+
+[.instruction]
+Filteransicht anpassen:
+
+. Öffne das Menü *Aufträge » Aufträge [Testphase]*.
+. Klicke auf *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty]). +
+→ Der Bearbeitungsmodus wird geöffnet und die Standardansicht der Filter wird angezeigt.
+. Klappe rechts die *Einstellungen* auf.
+. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-filter-settings>>.
+
+
+==== Angezeigte Filter wählen
+
+Im Bearbeitungsmodus unter *Einstellungen » Filter-Einstellungen* werden dir die Filter in den Spalten *Verfügbare Filter* und *Angezeigte Filter* angezeigt. Entscheide selbst, welche Filter in der Ansicht sichtbar sein sollen.
+
+
+[[table-name]]
+.Verfügbare und Angezeigte Filter in der Auftragssuche
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+
+|*Verfügbare Filter*
+|In der linken Spalte werden alle verfügbaren Filter angezeigt. +
+Hinweis: Die Filter sind in *Grundlegende*, *Datum*, *Status*, *Artikel*, *Kontakt* und *Marktplatz* gruppiert. Klappe die jeweilige Gruppe auf, um die einzelnen Filter zu sehen und zu wählen.
+
+|*Angezeigte Filter*
+|In der rechten Spalte werden die ausgewählten Filter angezeigt.
+
+
+[.instruction]
+Angezeigte Filter wählen:
+
+. Öffne das Menü *Aufträge » Aufträge [Testphase]*.
+. Klicke auf *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty]). +
+→ Der Bearbeitungsmodus wird geöffnet.
+. Klappe die Einstellungen auf, um die *Verfügbaren Filter* und die *Angezeigten Filter* zu sehen.
+. Verschiebe die Filter, die angezeigt werden sollen, per Drag & Drop vom Bereich *Verfügbare Filter* in den Bereich *Angezeigte Filter*.
+*_Tipp:_* Ziehe die Filter in der Spalte *Angezeigte Filter* an die gewünschte Stelle und passe so die Reihenfolge beliebig an.
+. *Speichere* (icon:save[role="green"]) die Einstellungen. +
+→ Die ausgewählten Filter werden in der Auftragsübersicht angezeigt. +
+*_Tipp:_* Wenn dir Filter fehlen, kannst du sie über die oben beschriebenen Schritte ergänzen.
+. Klicke auf icon:delete[set=material], um einen nicht benötigten Filter zu schließen. +
+→ Der Filter wird dann wieder im Bereich *Verfügbare Filter* angezeigt.
+. Klicke auf icon:plus[role="darkGrey"], um einen *Verfügbaren Filter* in den Bereich *Angezeigte Filter* zu verschieben.
 
 
 
@@ -784,87 +858,15 @@ Wähle *Ist in* (IN) oder *Vorhanden* (Symbol).
 |====
 
 
-=== Nach Aufträgen filtern
-
-Wenn du eine Suche ausführst, siehst du deine gewählten Filter oben als Chips dargestellt. Die Filter in der Auftragssuche sind nun MyView-fähig und können per Drag & Drop von *Verfügbare Filter* in *Angezeigte Filter* verschoben werden. Auch die Reihenfolge innerhalb der Spalten kann per Drag & Drop geändert werden.
-
-Um voreingestellte Filter zu sehen oder auszuwählen, gehe folgendermaßen vor.
-
-[.instruction]
-Nach Aufträgen filtern:
-
-. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
-. Gehe in die Suchleiste und klicke auf den Filter (icon:tune[set=material]). +
-→ Die Filtereinstellungen werden geöffnet..
-. Wähle Filter, um nur ausgewählte Daten in der Auftragsübersicht zu sehen. Die Auswahl der Filter kann verändert werden.
-. Klicke auf *SUCHEN*. +
-→ Du erhältst eine Liste der gefilterten Daten.
-
-// TODO: Filter parallel zur Weiterentwicklung prüfen, ggf. Screenshots
-
-=== Filteransicht anpassen
-
-Die Filteransicht entspricht nicht deinen Vorstellungen und du möchtest diese gerne auf deine Bedürfnisse anpassen? Über den Bearbeitungsmodus kannst du die Ansicht beliebig verändern.
-
-[.instruction]
-Filteransicht anpassen:
-
-. Öffne das Menü *Aufträge » Aufträge [Testphase]*.
-. Klicke auf *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty]). +
-→ Der Bearbeitungsmodus wird geöffnet und die Standardansicht der Filter wird angezeigt.
-. Klappe rechts die *Einstellungen* auf.
-. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-filter-settings>>.
-
-
-==== Angezeigte Filter wählen
-
-Im Bearbeitungsmodus unter *Einstellungen » Filter-Einstellungen* werden dir die Filter in den Spalten *Verfügbare Filter* und *Angezeigte Filter* angezeigt. Entscheide selbst, welche Filter in der Ansicht sichtbar sein sollen.
-
-
-
-
-[[table-name]]
-.Verfügbare und Angezeigte Filter in der Auftragssuche
-[cols="1,3"]
-|====
-|Einstellung |Erläuterung
-
-
-|*Verfügbare Filter*
-|In der linken Spalte werden alle verfügbaren Filter angezeigt. +
-Hinweis: Die Filter sind in *Grundlegende*, *Datum*, *Status*, *Artikel*, *Kontakt* und *Marktplatz* gruppiert. Klappe die jeweilige Gruppe auf, um die einzelnen Filter zu sehen und zu wählen.
-
-|*Angezeigte Filter*
-|In der rechten Spalte werden die ausgewählten Filter angezeigt.
-
-
-[.instruction]
-Angezeigte Filter wählen:
-
-. Öffne das Menü *Aufträge » Aufträge [Testphase]*.
-. Klicke auf *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty]). +
-→ Der Bearbeitungsmodus wird geöffnet.
-. Klappe die Einstellungen auf, um die *Verfügbaren Filter* und die *Angezeigten Filter* zu sehen.
-. Verschiebe die Filter, die angezeigt werden sollen, per Drag & Drop vom Bereich *Verfügbare Filter* in den Bereich *Angezeigte Filter*.
-*_Tipp:_* Ziehe die Filter in der Spalte *Angezeigte Filter* an die gewünschte Stelle und passe so die Reihenfolge beliebig an.
-. *Speichere* (icon:save[role="green"]) die Einstellungen. +
-→ Die ausgewählten Filter werden in der Auftragsübersicht angezeigt. +
-*_Tipp:_* Wenn dir Filter fehlen, kannst du sie über die oben beschriebenen Schritte ergänzen.
-. Klicke auf icon:delete[set=material], um einen nicht benötigten Filter zu schließen. +
-→ Der Filter wird dann wieder im Bereich *Verfügbare Filter* angezeigt.
-. Klicke auf icon:plus[role="darkGrey"], um einen *Verfügbaren Filter* in den Bereich *Angezeigte Filter* zu verschieben.
-
-
 [#save-current-filter]
-
-=== Aktuellen Filter speichern
+=== Aktuelle Filter speichern
 
 Wenn du eine Suche mit Filtern ausführst, siehst du deine gewählten Filter oben als Chips dargestellt. Diese Filter kannst du speichern, um sie in Zukunft schneller und einfacher wieder verwenden zu können. Du kannst entweder einen Filter direkt beim Erstellen als Standard festlegen (Kugel nach rechts schieben, wird blau) oder du legst den Filter nachträglich aus der Übersicht heraus als Standard fest (auf Sternsymbol klicken *Als Standard festlegen*).
 // TODO: Kugel/Sternsymbol richtig formulieren
 // TODO: Screenshots wo sinnvoll
 
 [.instruction]
-Filter speichern:
+Aktuelle Filter speichern:
 
 . Öffne das Menü *Aufträge » Aufträge [Testphase]*.
 . Gehe in die Suchleiste. 
@@ -881,6 +883,7 @@ Filter speichern:
 → Der Filter erscheint nun unter *Gespeicherte Filter* (icon:bookmarks[set=material]). +
 
 *_Tipp:_* Wenn dir Filter fehlen, kannst du sie über die oben beschriebenen Schritte ergänzen.
+
 
 
 [#use-saved-filters]
@@ -909,7 +912,7 @@ Schon in der Auftragsübersicht stehen dir Bearbeitungsfunktionen für Aufträge
 Beachte, dass nur die Funktionen angezeigt werden, die auf diesen Auftrag angewendet werden können und für die die Benutzer:in die Rechte hat.
 
 [.instruction]
-Einzelfunktion für Auftrag nutzen:
+.Einzelfunktion für Auftrag nutzen:
 
 . Suche den Auftrag, den du bearbeiten möchtest.
 . Klicke auf das Kontextmenü (icon:more_vert[set=material]) am Ende der Zeile. +
@@ -1100,8 +1103,6 @@ Mehrere Aufträge über die Gruppenfunktion bearbeiten:
 → Klicke auf einen der Bereiche, um den Auftrag in der Detailansicht zu öffnen.
 . Klicke auf icon:angle-down[], um die Bereiche des Auftrags wieder zu schließen. +
 → Der Auftrag bleibt aber in der Liste sichtbar.
-
-
 
 
 = Auftragstypen
@@ -1401,7 +1402,7 @@ Unterschied spezifische und alle
 ////
 
 
-
+[#order-type-credit-note]
 == Gutschrift
 
 In plentymarkets kannst du Gutschriften als PDF-Dateien generieren, um diese z.B. zu drucken oder deinen Kund:innen als E-Mail Anhang zukommen zu lassen. +
@@ -1431,6 +1432,7 @@ Hat eine Kund:in den Auftrag bereits gezahlt, beispielsweise per Vorkasse, und e
 // TODO: xref prüfen
 Kommt es nach erfolgter Zahlung, Warenausgang und Zustellung der Ware für eine oder alle Auftragspositionen zu einer xref:auftraege:auftraege-verwalten.adoc#400[Retoure] oder im Folgenden zu einem xref:auftraege:auftraege-verwalten.adoc#700[Reparaturauftrag], lege die Gutschrift direkt im entsprechenden Retouren- oder Reparaturauftrag an.
 ====
+
 
 :ordertype: Gutschriften
 
@@ -1562,9 +1564,10 @@ Gutschriftbeleg erstellen:
 Erstellte Gutschriften weisen jeweils eine Referenz zu der Rechnung des dazugehörigen Auftrages auf. Im Tab *Dokumente* eines Auftrags wird dies in der Benennung der Gutschrift angezeigt.
 
 
-== Gewährleistung
-
 [#order-type-warranty]
+== Gewährleistung
+// TODO: Text
+
 == Auftragstyp Gewährleistung nutzen
 
 Gewährleistungen sind xref:auftraege:auftraege-verwalten.adoc#400[Retouren] relativ ähnlich, denn in beiden Fällen bekommst du Waren eines Auftrags im *Status 7* wieder zurückgesendet. Im Gegensatz zur Retoure erwarten Kund:innen bei einer Gewährleistung aber entweder eine neue Lieferung oder eine Rückerstattung des Rechnungsbetrags mittels einer xref:auftraege:auftraege-verwalten.adoc#500[Gutschrift].
@@ -1723,3 +1726,8 @@ Gewährleistung durch Gutschrift abschließen:
 
 Der weitere Bearbeitungsprozess läuft identisch mit dem regulären Anlegen einer Gutschrift und dem Erzeugen eines Gutschriftbelegs ab und wird im Kapitel xref:auftraege:auftraege-verwalten.adoc#500[Auftragstyp Gutschrift nutzen] detailliert beschrieben.
 ////
+
+== Lieferauftrag
+
+geteilter Auftrag
+
