--- a/docs/de-de/modules/crm/pages/schnellsuche.adoc
+++ b/docs/de-de/modules/crm/pages/schnellsuche.adoc
@@ -9,9 +9,9 @@ Verwende die Schnellsuche, um alle Informationen eines Kontakts oder die Adressd
 [NOTE]
 .Gastbestellungen, die über den plentyShop ins System kommen, können nur in der Schnellsuche gefunden werden
 ====
-Um DSGVO-konform zu arbeiten, wird bei Gastbestellungen, die über den plentyShop in dein System kommen, kein Kontaktdatensatz erstellt. Es werden lediglich die Adressdaten gespeichert. Diese Daten, die in deinem plentymarkets System gespeichert werden, können daher _nicht_ über das Menü *CRM » Kontakte* gefunden werden. Die Adressdaten der Person, die als Gast bestellt hat, können nur über die Schnellsuche gefunden werden. +
+Um DSGVO-konform zu arbeiten, wird bei Gastbestellungen, die über den plentyShop in dein System kommen, kein Kontaktdatensatz erstellt. Es werden lediglich die Adressdaten gespeichert. Diese Daten, die in deinem plentymarkets System gespeichert werden, können daher _nicht_ über das Menü *CRM » Kontakte* gefunden werden. Die Adressdaten der Person, die als Gast in deinem plentyShop bestellt hat, können nur über die Schnellsuche gefunden werden. Ebenfalls nur über die Schnellsuche kannst du die Daten aus der Gastbestellung, die über den plentyShop ins System kommen, nur in der Schnellsuche in einen regulären Kontaktdatensatz umwandeln.
 
-Weitere Informationen zum Umwandeln von plentyShop-Gastbestellungen in reguläre Kontaktdatensätze findest du im Kapitel <<#gastzugang-umwandeln, Gastzugang in Kontaktdatensatz umwandeln>>.
+Weitere Informationen zum Umwandeln von plentyShop-Gastbestellungen in reguläre Kontaktdatensätze findest du im Kapitel <<#gastzugang-umwandeln, plentyShop- und Marktplatz-Gastbestellung in Kontaktdatensatz umwandeln>>.
 ====
 
 [#benutzerrechte]
@@ -171,7 +171,7 @@ Weitere Informationen findest du im Kapitel <<#datensatz-anonymisieren, Datensat
 
 | *Gast in Kontakt umwandeln*
 |Mit einem Klick auf icon:swap_horiz[set=material] werden die Adressdaten aus einer Gastbestellung in einen regulären Kontaktdatensatz umgewandelt. Im neu erstellten Kontaktdatensatz wird dann im Bereich *Historie* der Eintrag *Umgewandelt von* sowie der Name der Person, die den Datensatz umgewandelt hat, hinzugefügt. +
-Weitere Informationen findest du im Kapitel <<#gastzugang-umwandeln, Gastzugang in Kontaktdatensatz umwandeln>>. +
+Weitere Informationen findest du im Kapitel <<#gastzugang-umwandeln, plentyShop- und Marktplatz-Gastbestellung in Kontaktdatensatz umwandeln>>. +
 *_Hinweis:_* Wenn es sich bereits um einen Kontakt handelt, ist dieses Feld ausgegraut.
 
 | *Daten neu laden*
@@ -186,14 +186,18 @@ Weitere Informationen findest du im Kapitel <<#gastzugang-umwandeln, Gastzugang 
 |====
 
 [#gastzugang-umwandeln]
-== Gastzugang in Kontaktdatensatz umwandeln
+== plentyShop- und Marktplatz-Gastbestellung in Kontaktdatensatz umwandeln 
 
-Im Menü *CRM » Schnellsuche* kannst du mit einem Klick die Adressdaten aus einer Gastbestellung in einen regulären Zugang umwandeln.
+Im Menü *CRM » Schnellsuche* kannst du mit nur einem Klick die Adressdaten aus einer Gastbestellung, die entweder über deinen plentyShop oder über einen Marktplatz in dein System gekommen sind, in einen regulären Kontaktdatensatz umwandeln.
 
-Bei Gastbestellung über den plentyShop besteht der gespeicherte Datensatz lediglich aus der Adresse und dem zugehörigen Auftrag. Wenn in der Adresse zusätzlich ein Firmenname enthalten ist, wird beim Umwandeln des Datensatzes auch der Firmendatensatz erstellt.
+* Bei einer Gastbestellung über den plentyShop besteht der gespeicherte Datensatz lediglich aus der Adresse und dem zugehörigen Auftrag; eine Kontakt-ID wird _nicht_ vergeben, jedoch wird das Symbol icon:done[set=material] in der Übersicht in der Spalte *Gast* angezeigt.
+
+* Bei einer Gastbestellung über einen Marktplatz wird eine Kontakt-ID vergeben und das Symbol icon:done[set=material] wird in der Übersicht in der Spalte *Gast* angezeigt.
+
+Wenn in der Adresse zusätzlich ein Firmenname enthalten ist, wird beim Umwandeln des Datensatzes auch ein Firmendatensatz erstellt.
 
 [.instruction]
-Gastzugang in Kontaktdatensatz umwandeln:
+plentyShop- und Marktplatz-Gastbestellung in Kontaktdatensatz umwandeln:
 
 . Öffne das Menü *CRM » Schnellsuche*.
 . Wähle mindestens einen Filter. Beachte dazu die Erläuterungen in <<#table-filter-quick-search>>.
@@ -207,11 +211,15 @@ Gastzugang in Kontaktdatensatz umwandeln:
 → Der Datensatz wird in einen Kontaktdatensatz umgewandelt und erhält automatisch die nächste freie Kontakt-ID. Im Bereich *Historie* des Kontaktdatensatzes wird der Eintrag *Umgewandelt von* sowie der Name der Person, die den Datensatz umgewandelt hat, hinzugefügt.
 
 [TIP]
-.Marktplatz-Gastbestellungen vs. plentyShop-Gastbestellungen
+.plentyShop-Gastbestellungen und Marktplatz-Gastbestellungen 
 ====
-Auf der Handbuchseite xref:crm:kontakte-verwalten.adoc#[Kontakte] im Kapitel xref:crm:kontakte-verwalten.adoc#350[Gastzugang in regulären Zugang umwandeln] ist beschrieben, wie du Gastbestellungen aus deinem alten Webshop (Callisto) bzw. Gastbestellungen, die über einen Marktplatz in dein System kamen, in reguläre Zugänge umwandelst. Das Umwandeln von plentyShop-Gastbestellungen in reguläre Zugänge ist über den Kontaktdatensatz nicht möglich.
+plentyShop-Gastbestellungen erhalten das Symbol icon:done[set=material] in der Übersicht in der Spalte *Gast*, jedoch _keine_ Kontakt-ID. Marktplatz-Gastbestellungen erhalten das Symbol icon:done[set=material] in der Übersicht in der Spalte *Gast* und zusätzlich eine Kontakt-ID.
 
-Jedoch kannst du über die Schnellsuche neben plentyShop-Gastbestellungen auch Callisto-Gastbestellungen in reguläre Kontaktdatensätze umwandeln.
+_*Hinweise zum Umwandeln einer Gastbestellung in einen Kontaktdatensatz:_*
+
+* Das Umwandeln einer plentyShop-Gastbestellung ist nur im Menü *CRM » Schnellsuche* möglich.
+
+* Das Umwandeln einer Marktplatz-Gastbestellung ist sowohl im Menü *CRM » Schnellsuche* als auch über den Kontaktdatensatz im Menü *CRM » Kontakte* möglich. Wie du dazu vorgehst, ist im Kapitel crm:kontakt-bearbeiten.adoc#gastzugang-in-regulaeren-zugang-umwandeln[Gastbestellung in regulären Kontaktdatensatz umwandeln] auf der Seite xref:crm:kontakt-bearbeiten.adoc#[Kontakt bearbeiten] beschrieben.
 ====
 
 [#alle-daten-herunterladen]
