--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -725,8 +725,9 @@ Historie ansehen:
 |[#intable-history-access-type]*Zugangsart*
 |Art, wie sich der Kontakt registriert hat. +
 *Regulärer Zugang* = Der Kontakt hat sich neu registriert bzw. der Datensatz wurde manuell im Backend erstellt. +
-*Gastzugang* = Die Bestellung kam über einen Marktplatz in dein System oder der Kontakt hat sich über deinen Webshop als Gast angemeldet und bestellt. +
-*_Hinweis:_* Wenn der Datensatz ein Gast ist und eine ID hat, ist die Bestellung über einen Marktplatz in dein System gekommen. Wenn der Datensatz ein Gast ist und keine ID hat, ist die Bestellung über deinen plentyShop ins System gekommen.
+*Gastzugang* = Die Bestellung kam über einen Marktplatz in dein System oder der Kontakt hat sich über deinen plentyShop als Gast angemeldet und bestellt. +
+*_Hinweis:_* Gastbestellungen erkennst du generell an dem Symbol icon:done[set=material] in der Übersicht in der Spalte *Gast*. +
+Wenn der Datensatz ein Gast ist und eine Kontakt-ID hat, ist die Bestellung über einen Marktplatz in dein System gekommen. Wenn der Datensatz ein Gast ist und keine Kontakt-ID hat, ist die Bestellung über deinen plentyShop ins System gekommen.
 
 |[#intable-history-last-order]*Letzter Auftrag*
 |Datum und Uhrzeit, wann der letzte Auftrag eingegangen ist. Wenn kein Auftrag eingegangen ist, steht in diesem Feld *Keine Daten*.
