--- a/docs/de-de/modules/crm/pages/schnellsuche.adoc
+++ b/docs/de-de/modules/crm/pages/schnellsuche.adoc
@@ -22,7 +22,7 @@ Weitere Informationen zum Umwandeln von plentyShop-Gastbestellungen in reguläre
 
 include::_includes:page$rechte.adoc[]
 
-Weitere Informationen zu den Rechten für das Menü *CRM » Kontakte* für Backend-Benutzer:innen findest du auf der Handbuchseite xref:crm:kontakte-verwalten.adoc#50[Kontakte].
+Weitere Informationen zu den Rechten für das Menü *CRM » Kontakte* für Backend-Benutzer:innen findest du auf der Handbuchseite xref:crm:vorbereitende-einstellungen.adoc#rechte-vergeben[Vorbereitende Einstellungen vornehmen].
 
 [#datensaetze-finden]
 == Datensätze über die Schnellsuche finden
