update schnellsuche und kontakt bearbeiten (#341)
* update schnellsuche und kontakt bearbeiten

* update

* add more details

* add icon

* update link

--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -725,7 +725,9 @@ Historie ansehen:
 |[#intable-history-access-type]*Zugangsart*
 |Art, wie sich der Kontakt registriert hat. +
 *Regulärer Zugang* = Der Kontakt hat sich neu registriert bzw. der Datensatz wurde manuell im Backend erstellt. +
-*Gastzugang* = Die Bestellung kam über einen Marktplatz in dein System oder der Kontakt hat sich über deinen alten Webshop als Gast angemeldet und bestellt.
+*Gastzugang* = Die Bestellung kam über einen Marktplatz in dein System oder der Kontakt hat sich über deinen plentyShop als Gast angemeldet und bestellt. +
+*_Hinweis:_* Gastbestellungen erkennst du generell an dem Symbol icon:done[set=material] in der Übersicht in der Spalte *Gast*. +
+Wenn der Datensatz ein Gast ist und eine Kontakt-ID hat, ist die Bestellung über einen Marktplatz in dein System gekommen. Wenn der Datensatz ein Gast ist und keine Kontakt-ID hat, ist die Bestellung über deinen plentyShop ins System gekommen.
 
 |[#intable-history-last-order]*Letzter Auftrag*
 |Datum und Uhrzeit, wann der letzte Auftrag eingegangen ist. Wenn kein Auftrag eingegangen ist, steht in diesem Feld *Keine Daten*.
@@ -1459,11 +1461,29 @@ Zahlungsziel für mehrere Kontakte speichern:
 [#gastzugang-in-regulaeren-zugang-umwandeln]
 == Gastbestellung in regulären Kontaktdatensatz umwandeln
 
-Um DSGVO-konform zu arbeiten, wird bei Gastbestellungen über den plentyShop LTS _kein_ Kontaktdatensatz mit einer Kontakt-ID erstellt. Bestellungen, die als Gast über deinen plentyShop aufgegeben wurden, können daher _nicht_ über das Menü *CRM » Kontakte* gefunden werden. Die Daten des Gastes können nur über die Adressdaten im Menü *CRM » Schnellsuche* gefunden werden.
+Gastbestellungen erkennst du generell an dem Symbol icon:done[set=material] in der Übersicht in der Spalte *Gast*.
 
-Du erkennst eine Gastbestellung an dem Haken (icon:done[set=material]) in der Spalte *Gast* in der Übersicht.
+Um DSGVO-konform zu arbeiten, wird bei Gastbestellungen, die über deinen plentyShop LTS in dein System kommen, _kein_ Kontaktdatensatz mit einer Kontakt-ID erstellt. plentyShop-Gastbestellungen können daher _nicht_ über das Menü *CRM » Kontakte* gefunden werden, da sie faktisch kein Kontakt sind. Die Daten aus der plentyShop-Gastbestellung können nur über die Adressdaten im Menü *CRM » Schnellsuche* gefunden und dort auch nur in einen regulären Kontaktdatensatz umgewandelt werden.
 
-Weitere Informationen zum Umwandeln von plentyShop-Gastbestellungen in reguläre Kontaktdatensätze findest du auf der Handbuchseite xref:crm:schnellsuche.adoc#[Schnellsuche] im Kapitel xref:crm:schnellsuche.adoc#gastzugang-umwandeln[Gastzugang in Kontaktdatensatz umwandeln].
+Gastbestellungen, die über einen Marktplatz in dein System kommen, erhalten eine Kontakt-ID. Daher kannst du Marktplatz-Gastbestellungen auch im Kontaktdatensatz im Menü *CRM » Kontakte* in einen regulären Kontaktdatensatz umwandeln. Gehe dazu wie im Folgenden beschrieben vor.
+
+[.instruction]
+Gastbestellung in regulären Kontaktdatensatz umwandeln:
+
+. Öffne das Menü *CRM » Kontakte*.
+. Suche den Kontakt anhand der Filtereinstellungen. Beachte dazu die Erläuterungen zu den Filtern auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen]. +
+→ Die Kontakte, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
+. Klicke in die Zeile des Kontakts, um den Datensatz zu öffnen.
+. Klicke auf der linken Seite auf *Optionen*. +
+→ Im Bereich *Optionen* siehst du den Eintrag *Zugang, Gast* mit dem Wert *1*. 1 bedeutet, dass es sich um einen Gast handelt. 
+. Klicke in der Zeile *Zugang, Gast* auf icon:close[set=material], um die Option zu entfernen.
+. *Speichere* (icon:save[set=material]) die Einstellungen. +
+→ Das Symbol icon:done[set=material] verschwindet in der Übersicht in der Spalte *Gast*. Der Gast wurde in einen Kontaktdatensatz umgewandelt. +
+*_Hinweis:_* Lade ggf. das Menü *CRM » Kontakte* neu, wenn du die Änderung nicht sofort sehen kannst. 
+
+icon:exclamation-triangle[role="red"] Informiere den Kontakt darüber, dass die Gastbestellung in einen regulären Kontaktdatensatz umgewandelt wurde und sende dem Kontakt eine E-Mail, damit der Kontakt ein Passwort für den Login in deinem plentyShop vergeben kann.
+
+Weitere Informationen zum Umwandeln von plentyShop- und Marktplatz-Gastbestellungen in reguläre Kontaktdatensätze findest du auf der Handbuchseite xref:crm:schnellsuche.adoc#[Schnellsuche] im Kapitel xref:crm:schnellsuche.adoc#gastzugang-umwandeln[plentyShop- und Marktplatz-Gastbestellung in Kontaktdatensatz umwandeln].
 
 [#dublettenpruefung-kontakt-aktualisieren]
 == Dublettenprüfung bei Kontaktdatensätzen mit identischer E-Mail-Adresse
