FIX wording and formatting

--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -1478,7 +1478,7 @@ Gastbestellung in regulären Kontaktdatensatz umwandeln:
 → Im Bereich *Optionen* siehst du den Eintrag *Zugang, Gast* mit dem Wert *1*. 1 bedeutet, dass es sich um einen Gast handelt. 
 . Klicke in der Zeile *Zugang, Gast* auf icon:close[set=material], um die Option zu entfernen.
 . *Speichere* (icon:save[set=material]) die Einstellungen. +
-→ Das Symbol icon:done[set=material] verschwindet in der Übersicht in der Spalte *Gast*. Der Gast wurde in einen Kontaktdatensatz umgewandelt. +
+→ Der Gast wurde in einen Kontaktdatensatz umgewandelt. Das Symbol icon:done[set=material] wird aus der Spalte *Gast* in der Übersicht entfernt.  +
 *_Hinweis:_* Lade ggf. das Menü *CRM » Kontakte* neu, wenn du die Änderung nicht sofort sehen kannst. 
 
 icon:exclamation-triangle[role="red"] Informiere den Kontakt darüber, dass die Gastbestellung in einen regulären Kontaktdatensatz umgewandelt wurde und sende dem Kontakt eine E-Mail, damit der Kontakt ein Passwort für den Login in deinem plentyShop vergeben kann.
