change icon from dots to plus

--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -521,7 +521,7 @@ Du kannst den Link zum Mein Konto-Bereich des Kontakts in deinem plentyShop mit 
 
 Hier siehst du alle Aufträge des Kontakts. Wenn du den Kontaktdatensatz öffnest, ist dieser Bereich standardmäßig geöffnet und die vorhandenen Daten werden geladen. Mit einem Klick in die Zeile des Auftrags öffnet sich der Auftrag im Menü *Aufträge » Aufträge bearbeiten*.
 
-Mit einem Klick auf *Optionen* (icon:more_vert[set=material]) oben rechts erstellst du einen neuen Auftrag, ein neues Angebot oder ein neues Abonnement. Weitere Informationen zu diesem Kontextmenü findest du auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen] im Kapitel xref:crm:kontakt-suchen.adoc#kontextmenue-uebersicht[Kontextmenü in der Übersicht].
+Mit einem Klick auf *Optionen* (icon:add[set=material]) oben rechts erstellst du einen neuen Auftrag, ein neues Angebot oder ein neues Abonnement. Weitere Informationen zu diesem Kontextmenü findest du auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen] im Kapitel xref:crm:kontakt-suchen.adoc#kontextmenue-uebersicht[Kontextmenü in der Übersicht].
 
 Mit einem Klick auf *Spalten konfigurieren* (icon:settings[set=material]) oben rechts entscheidest du, welche Spalten im Bereich *Aufträge* angezeigt werden. Klicke auf icon:sort[set=material], um die Reihenfolge der Spalten per Drag-and-drop zu verschieben. Die folgenden Spalten sind verfügbar:
 
