--- a/docs/en-gb/modules/crm/pages/edit-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/edit-contact.adoc
@@ -400,7 +400,7 @@ You can copy the link to the contact’s My account area in your plentyShop to t
 
 Here, you can see all orders of the contact. When you open the contact data record, this area is opened by default and the available data is loaded. Click in the line of the order to open the order in the *Orders » Edit order* menu.
 
-Click on *Options* (icon:more_vert[set=material]) on the top right to create a new order, a new offer or a new subscription. For further information about this context menu, refer to the xref:crm:search-contact.adoc#context-menu-overview[Context menu in the overview] chapter on the xref:crm:search-contact.adoc#[Searching for a contact] page.
+Click on *Options* (icon:add[set=material]) on the top right to create a new order, a new offer or a new subscription. For further information about this context menu, refer to the xref:crm:search-contact.adoc#context-menu-overview[Context menu in the overview] chapter on the xref:crm:search-contact.adoc#[Searching for a contact] page.
 
 Click on *Configure columns* (icon:settings[set=material]) on the top right and decide which columns to show in the *Orders* area. Click on icon:sort[set=material] to change the order of the columns with drag-and-drop. The following columns are available:
 
